prod/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coffeeshop-ingress
  namespace: coffeeshop
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: meraviglioso.id.vn
    http:
      paths:
      - path: /proxy
        pathType: Prefix
        backend:
          service:
            name: proxy
            namespace: coffeeshop
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            namespace: coffeeshop
            port:
              number: 8888
