prod/ingress/proxy-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxy-ingress
  namespace: coffeeshop
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - www.meraviglioso.id.vn
    secretName: meraviglioso-id-vn-tls
  rules:
  - host: www.meraviglioso.id.vn
    http:
      paths:
      - path: /proxy(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: proxy
            port:
              number: 5000
